last-commit-for-

--- a/src/anasayfa/templates/index.html
+++ b/src/anasayfa/templates/index.html
@@ -18,8 +18,8 @@
                             <p>
                                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum
                             </p>
-                            <a class="button border c-white" href="projeler.html">
-                                PROJELER
+                            <a class="button border c-white" href="{{ankara_dijital_baski}}">
+                                Hizmetlerimiz
                                 <svg viewBox="0 0 26.463 8.312"><path d="M299.086,183.828h26.463l-8.312-8.312-1.67,1.669,4.281,4.281H299.086Z" transform="translate(-299.086 -175.516)"></path></svg>
                             </a>
                         </div>
@@ -40,8 +40,8 @@
                             <p>
                                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum
                             </p>
-                            <a class="button border c-white" href="projeler.html">
-                                PROJELER
+                            <a class="button border c-white" href="{{ankara_dijital_baski}}">
+                                Hizmetlerimiz
                                 <svg viewBox="0 0 26.463 8.312"><path d="M299.086,183.828h26.463l-8.312-8.312-1.67,1.669,4.281,4.281H299.086Z" transform="translate(-299.086 -175.516)"></path></svg>
                             </a>
                         </div>
@@ -130,10 +130,6 @@
                     <br><br>
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr.
                 </p>
-                <a href="{{hakkimizda}}" class="button bg-green">
-                    KURUMSAL
-                    <svg viewBox="0 0 26.463 8.312"><path d="M299.086,183.828h26.463l-8.312-8.312-1.67,1.669,4.281,4.281H299.086Z" transform="translate(-299.086 -175.516)"></path></svg>
-                </a>
             </div>
         </div>
     </div>
@@ -162,7 +158,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6">
-                <a href="{% url 'ankara_dijital_baski' %}">
+                <a href="{% url 'ankara_display_urunleri' %}">
                     <div class="blogBox blur">
                         <div class="imgContent imgBorder">
                             <img data-src="{% static 'assets/image/article/home_about.png' %}" alt="Blog Image" class="lazy">
@@ -175,7 +171,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6">
-                <a href="{% url 'ankara_dijital_baski' %}">
+                <a href="{% url 'ankara_tabela_sistemleri' %}">
                     <div class="blogBox blur">
                         <div class="imgContent imgBorder">
                             <img data-src="{% static 'assets/image/article/home_about.png' %}" alt="Blog Image" class="lazy">
@@ -188,7 +184,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6">
-                <a href="{% url 'ankara_dijital_baski' %}">
+                <a href="{% url 'ankara_matbaa_hizmetleri' %}">
                     <div class="blogBox blur">
                         <div class="imgContent imgBorder">
                             <img data-src="{% static 'assets/image/article/home_about.png' %}" alt="Blog Image" class="lazy">
@@ -201,7 +197,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6">
-                <a href="{% url 'ankara_dijital_baski' %}">
+                <a href="{% url 'ankara_matbaa_hizmetleri' %}">
                     <div class="blogBox blur">
                         <div class="imgContent imgBorder">
                             <img data-src="{% static 'assets/image/article/home_about.png' %}" alt="Blog Image" class="lazy">
@@ -214,7 +210,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6">
-                <a href="{% url 'ankara_dijital_baski' %}">
+                <a href="{% url 'ankara_web_tasarimi' %}">
                     <div class="blogBox blur">
                         <div class="imgContent imgBorder">
                             <img data-src="{% static 'assets/image/article/home_about.png' %}" alt="Blog Image" class="lazy">
