--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -29,15 +29,15 @@
                 <div class="col-lg-4">
                     <div class="contactInfo blur">
                         <div class="content">
-                            <h3>KUAS Home A.Ş.</h3>
+                            <h3>domainname A.Ş.</h3>
                             <ul class="info">
                                 <li>
                                     <span>A.</span>
-                                    Lara Caddesi, Kemal sokak. No. 67 D:12 <br> İstanbul / Türkiye
+                                    Lara Caddesi, Kemal sokak. No. 67 D:12 <br> Ankara / Türkiye
                                 </li>
                                 <li>
                                     <span>M.</span>
-                                    <a href="#">info@kuas.com.tr</a>
+                                    <a href="#">info@domainname.com.tr</a>
                                 </li>
                                 <li>
                                     <span>T.</span>
