--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -9,24 +9,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="http://berkcengiz.com/assets/image/logo/favicon.ico" />
-    <link rel="apple-touch-icon" href="http://berkcengiz.com/assets/image/logo/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" href="favicon.ico">
     <!-- SEO Meta Tags -->
     <meta property="og:locale" content="en_EN" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Berk Cengiz" />
+    <meta property="og:site_name" content="Ferhat Tuğrul" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@">
     <meta name="twitter:creator" content="@">
-    <meta property="og:image" content="http://berkcengiz.com/assets/image/default_cover.jpg' %}" />
-    <meta name="twitter:image" content="http://berkcengiz.com/assets/image/default_cover.jpg' %}">
-    <meta property="og:url" content="http://www.berkcengiz.com" />
-    <meta property="og:description" content="Berk Cengiz is personal website." />
-    <meta property="og:title" content="Berk Cengiz is personal website." />
-    <meta name="description" content="Berk Cengiz is personal website." />
-    <meta name="keywords" content="b3rk,berk cengiz,b3 house,yiğit akü,petrol ofisi,freelance web tasarım,stok takip sistemi,web sitesi tasarımı" />
-    <meta name="twitter:title" content="Berk Cengiz is personal website.">
-    <meta name="twitter:description" content="Berk Cengiz is personal website.">
+    <meta property="og:image" content="default_cover.jpg' %}" />
+    <meta name="twitter:image" content="default_cover.jpg' %}">
+    <meta property="og:description" content="null" />
+    <meta property="og:title" content="null" />
+    <meta name="description" content="null" />
+    <meta name="keywords" content="null" />
+    <meta name="twitter:title" content="null">
+    <meta name="twitter:description" content="null">
     <!-- Bootstrap -->
     <link href="{% static 'assets/plugins/bootstrap-5.0.1/css/bootstrap.min.css' %}" type="text/css" rel="stylesheet" />
     <!-- SwiperJs -->
@@ -101,7 +100,7 @@
                 </a>
                 <ul>
                     <li>
-                        <a href="{% url 'ankara_dijital_baski' %}" class="{% if request.path == '/ankara-dijital-baski/' %}active{% endif %}"> PROJELER</a>
+                        <a href="{% url 'ankara_dijital_baski' %}" class="{% if request.path == '/ankara-dijital-baski/' %}active{% endif %}"> HİZMETLERİMİZ</a>
                     </li>
                     <li>
                         <a href="{{blog}}" class="{% if request.path == blog %}active{% endif %}">BLOG</a>
