last-commit-for-

--- a/src/products/templates/includes/left_menü.html
+++ b/src/products/templates/includes/left_menü.html
@@ -35,6 +35,12 @@
                 </a>
             </li>
             <li>
+                <a href="{% url 'ankara_uv_baski' %}" class="{% if url_name == 'ankara_uv_baski' %}active{% endif %}">
+                    Uv Bası
+                    <i class="fi fi-rr-angle-small-right"></i>
+                </a>
+            </li>
+            <li>
                 <a href="{% url 'ankara_web_tasarimi' %}" class="{% if url_name == 'ankara_web_tasarimi' %}active{% endif %}">
                     Ankara Web Tasarımı
                     <i class="fi fi-rr-angle-small-right"></i>
