--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -33,15 +33,15 @@
                             <ul class="info">
                                 <li>
                                     <span>A.</span>
-                                    Lara Caddesi, Kemal sokak. No. 67 D:12 <br> Ankara / Türkiye
+                                    Pınarbaşı Mah. Aksaray Cad. 12/B Keçiören<br> Ankara / Türkiye
                                 </li>
                                 <li>
                                     <span>M.</span>
-                                    <a href="#">info@domainname.com.tr</a>
+                                    <a href="mailo:">info@domainname.com.tr</a>
                                 </li>
                                 <li>
                                     <span>T.</span>
-                                    <a href="#">444 44 44</a>
+                                    <a href="tel:+905513841906">+90 551 384 19 06</a>
                                 </li>
                             </ul>
                             <div class="social">
