--- a/src/anasayfa/templates/index.html
+++ b/src/anasayfa/templates/index.html
@@ -19,7 +19,7 @@
                                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum
                             </p>
                             <a class="button border c-white" href="{{ankara_dijital_baski}}">
-                                Hizmetlerimiz
+                                Projelerimiz
                                 <svg viewBox="0 0 26.463 8.312"><path d="M299.086,183.828h26.463l-8.312-8.312-1.67,1.669,4.281,4.281H299.086Z" transform="translate(-299.086 -175.516)"></path></svg>
                             </a>
                         </div>
@@ -41,7 +41,7 @@
                                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum
                             </p>
                             <a class="button border c-white" href="{{ankara_dijital_baski}}">
-                                Hizmetlerimiz
+                                Projelerimiz
                                 <svg viewBox="0 0 26.463 8.312"><path d="M299.086,183.828h26.463l-8.312-8.312-1.67,1.669,4.281,4.281H299.086Z" transform="translate(-299.086 -175.516)"></path></svg>
                             </a>
                         </div>
@@ -122,7 +122,7 @@
             </div>
             <div class="col-lg-6">
                 <h3>
-                    <span>METİN KURUMSAL</span>
+                    <span>KURUMSAL</span>
                     Bizi Yakından Tanıyın
                 </h3>
                 <p>
@@ -140,7 +140,7 @@
     <div style="margin-top: 100px;margin-bottom: 100px;" class="container">
         <div class="sectionTitle">
             <h2>
-                    Hizmetlerimiz  
+                    Projeler  
             </h2>
         </div>
         <div class="row">
@@ -210,6 +210,19 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6">
+                <a href="{% url 'ankara_uv_baski' %}">
+                    <div class="blogBox blur">
+                        <div class="imgContent imgBorder">
+                            <img data-src="{% static 'assets/image/article/home_about.png' %}" alt="Blog Image" class="lazy">
+                        </div>
+                        <div class="content">
+                            <p class="title">UV Baskı</p>
+                            <div class="button bg-green h-40">İncele</div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6">
                 <a href="{% url 'ankara_web_tasarimi' %}">
                     <div class="blogBox blur">
                         <div class="imgContent imgBorder">
@@ -232,7 +245,6 @@
         <div class="sectionTitle">
             <p>
                 BLOG
-                <span>DOMAİNNAME'TAN YAZILAR</span>
             </p>
         </div>
         <div class="swiper blogSwiper">
